--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "deploy": "parcel build ./src/index.html --public-url /js-calories-counter --no-source-maps && gh-pages -d dist",
     "start": "parcel ./src/index.html --open "
   },
-  "author": "Ivan Nefagin <nefagin.frontend@gmail.com>",
+  "author": "Kireev Nikolay ryt9992@mail.ru",
   "license": "ISC",
   "devDependencies": {
     "gh-pages": "^3.1.0",
